// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal (unit tests) when using a title should match the snapshot 1`] = `
<kv-modal custom-class="" header-title="Hello World">
  <template shadowrootmode="open">
    <div class="modal-overlay"></div>
    <div class="modal-container">
      <div class="topbar" part="topbar">
        <div class="title">
          Hello World
        </div>
        <div class="actions">
          <slot name="more-topbar-actions"></slot>
          <div class="close-button">
            <kv-icon name="kv-close"></kv-icon>
          </div>
        </div>
      </div>
      <div class="content" part="content">
        <slot name="header"></slot>
        <slot name="body"></slot>
        <slot name="footer"></slot>
      </div>
    </div>
  </template>
</kv-modal>
`;

exports[`Modal (unit tests) when using default props should match the snapshot 1`] = `
<kv-modal custom-class="">
  <template shadowrootmode="open">
    <div class="modal-overlay"></div>
    <div class="modal-container">
      <div class="topbar" part="topbar">
        <div class="title"></div>
        <div class="actions">
          <slot name="more-topbar-actions"></slot>
          <div class="close-button">
            <kv-icon name="kv-close"></kv-icon>
          </div>
        </div>
      </div>
      <div class="content" part="content">
        <slot name="header"></slot>
        <slot name="body"></slot>
        <slot name="footer"></slot>
      </div>
    </div>
  </template>
</kv-modal>
`;
